# er1_plugin

./: .gitignore  .gitmodules  README.md
reaper_test_project/: reaper_test_project.rpp
scripts/: build_debug.sh  build_release.sh  install_extras.sh  install_extras_win.sh  package_debug.iss  plugin_installer_config_release.json  rebuild_debug.sh  rebuild_release.sh
src/: CMakeLists.txt  CMakeSettings.json
src/er1/gooey/: BGImage.cpp  BGImage.h  ER1AudioProcessorEditor.cpp  ER1AudioProcessorEditor.h  GlobalCtrls.cpp  GlobalCtrls.h  Images.cpp  Images.h  Options.cpp  Options.h  PatchManager.cpp  PatchManager.h  PluginEditor.cpp  PluginEditor.h  RegistrationForm.cpp  RegistrationForm.h  VoiceSelector.cpp  VoiceSelector.h  constants.h
src/er1/gooey/amp_section/: AmpSectionComponent.cpp  AmpSectionComponent.h
src/er1/gooey/config_section/: GlobalCtrls.cpp  GlobalCtrls.h  LCDScreen.cpp  LCDScreen.h
src/er1/gooey/fonts/: FontLCD.cpp  FontLCD.h
src/er1/gooey/fonts/bin_data/: Arcade.cpp  Arcade.h  BitFonts.cpp  BitFonts.h  FontDSEG14.cpp  FontDSEG14.h  FontDSEG7.cpp  FontDSEG7.h  Segment16C.cpp  Segment16C.h
src/er1/gooey/grid/: Grid.cpp  Grid.h  GridBankSelector.cpp  GridBankSelector.h  GridButton.cpp  GridButton.h  PadGrid.cpp  PadGrid.h  SequenceGrid.cpp  SequenceGrid.h  SoundGrid.h
src/er1/gooey/left_box/: RedBox.cpp  RedBox.h  Transport.cpp  Transport.h
src/er1/gooey/look_and_feel/: ER1Colours.cpp  ER1Colours.h  ER1LAF.cpp  ER1LAF.h  StandardShapes.cpp  StandardShapes.h  WidgetManager.cpp  WidgetManager.h
src/er1/gooey/osc_section/: OscSectionComponent.cpp  OscSectionComponent.h
src/er1/gooey/patch_manager/: PatchManager.cpp  PatchManager.h
src/er1/gooey/patch_selector/: Arrows.cpp  PatchSelector.cpp  PatchSelector.h
src/er1/gooey/sequencer/: Sequencer.cpp  Sequencer.h  SequencerButton.cpp  SequencerButton.h
src/er1/gooey/sound_edit_box/: SoundEditorWindow.cpp  SoundEditorWindow.h
src/er1/gooey/sound_edit_box/amp_section/: AmpSectionComponent.cpp  AmpSectionComponent.h
src/er1/gooey/sound_edit_box/config_section/: ConfigComponent.cpp  ConfigComponent.h  ConfigSectionComponent.cpp  ConfigSectionComponent.h  LCDScreen.cpp  LCDScreen.h
src/er1/gooey/sound_edit_box/delay_section/: DelaySectionComponent.cpp  DelaySectionComponent.h
src/er1/gooey/sound_edit_box/osc_section/: OscSectionComponent.cpp  OscSectionComponent.h  WaveSelectors.cpp  WaveSelectors.h
src/er1/gooey/sound_edit_box/patch_selector/: PatchSelector.cpp  PatchSelector.h
src/er1/gooey/voice_selector/: Arrows.h  VoiceSelector.cpp  VoiceSelector.h
src/er1/gooey/widgets/: DividerLine.cpp  DividerLine.h  Header.cpp  Header.h  KorgButton.cpp  KorgButton.h  KorgComboBox.cpp  KorgComboBox.h  KorgKnob.cpp  KorgKnob.h  KorgPad.cpp  KorgPad.h  LCDButton.cpp  LCDButton.h  LCDReadout.cpp  LCDReadout.h  LCDText.cpp  LCDText.h  SelectorButton.cpp  SelectorButton.h
src/er1/guts/: Authentication.cpp  Authentication.h  ER1AudioProcessor.cpp  ER1AudioProcessor.h  ER1PCMSamples.cpp  ER1PCMSamples.h  GlobalOptions.cpp  GlobalOptions.h  LearnableSerializeableParam.h  LearnableSerializeableProcessorParamFloat.h  MidiManager.cpp  MidiManager.h  Patch.cpp  Patch.h  PluginProcessor.cpp
src/er1/guts/juce_synth/: ER1ControlBlock.cpp  ER1ControlBlock.h  ER1Sound.cpp  ER1Sound.h  ER1SoundPatch.cpp  ER1SoundPatch.h  ER1Synth.cpp  ER1Synth.h  ER1Voice.cpp  ER1Voice.h  ER1VoiceController.cpp  ER1VoiceController.h  SoundParameterBlocks.h
src/install_extras/presets/banks/: Alien Invaders.er1bnk  Bird Brains.er1bnk  Swamp Monsters.er1bnk
src/install_extras/presets/sounds/: 70's Computer.er1snd  Bottle Pop.er1snd  Cap'n Comic (R).er1snd  Classikick.er1snd  Curious Bird.er1snd  Dr. Who.er1snd  Error Bonk.er1snd  Frog Monster.er1snd  Growell.er1snd  Horror Scream.er1snd  Laser burst.er1snd  Major Block (r).er1snd  Mos-q Swarm 2.er1snd  Mosquito Swarm.er1snd  Noisy Cricket.er1snd  Slapstick.er1snd  UFO Sonar Ping.er1snd  baby bird.er1snd  bump.er1snd  buzzy 5.er1snd  checkpoint.er1snd  chirpop.er1snd  cistern.er1snd  flimsy snare.er1snd  grumpy bird.er1snd  health loss 2.er1snd  health loss 3.er1snd  health loss.er1snd  hit and miss.er1snd  horsefly.er1snd  oh baby.er1snd  western punch.er1snd  whomp.er1snd
src/juce_includes/: AppConfig.h  JuceHeader.h
src/shared/test_sandbox/sb_core/math/: math.cpp
src/standalone/: CMakeLists.txt  ER1Application.cpp  ER1Application.h  VirtualER1Component.cpp  VirtualER1Component.h
src/test/: AllTests.cpp  CMakeLists.txt
